@@ -1,5 +1,7 @@
 /.ackrc
+/.build/
 !/.gitignore
+/.latest
 /blib/
 /Makefile
 /MYMETA.*
