@@ -1,18 +1,0 @@
-Changes
-LICENSE
-MANIFEST			This list of files
-Makefile.PL
-README
-docs/figure1.gif
-docs/figure2.gif
-docs/figure3.gif
-lib/DateTime/Format/Duration.pm
-t/0_pod.t
-t/1_load.t
-t/2_fmt_normalise.t
-t/3_fmt_normalise_iso.t
-t/4_fmt_normalise_no_base.t
-t/5_fmt_no_normalise.t
-t/6_parse.t
-t/7_misc.t
-t/8_negatives.t
