@@ -1,30 +1,0 @@
-DateTime::Format::Duration version 1.03
-=========================================
-
-INSTALLATION
-
-To install this module type the following:
-
-   perl Makefile.PL
-   make
-   make test
-   make install
-
-DEPENDENCIES
-
-This module requires these other modules and libraries:
-
-  Test::More
-  DateTime
-  DateTime::Duration
-
-  and for more details in failed tests, it's good to have
-  Data::Dumper
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2003-2007 Rick Measham
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
-
