@@ -1,0 +1,21 @@
+name             = DateTime-Format-Duration
+author           = Rick Measham <rickm@cpan.org>
+copyright_holder = Rick Measham
+copyright_year   = 2003
+license          = Perl_5
+
+[@Author::ETHER]
+:version = 0.094
+changes_version_columns = 8
+installer = MakeMaker   ; stay 5.6-friendly
+-remove = PodWeaver
+-remove = Test::CPAN::Changes
+-remove = Test::CleanNamespaces
+-remove = Test::Pod::No404s
+-remove = Test::EOL
+-remove = Test::PodSpelling
+-remove = PodCoverageTests
+
+[Encoding]
+encoding = bytes
+match = ^docs/
